# cool

./: skin.py
data/: Makefile.am
lib/python/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/SystemPlugins/: Makefile.am
